# scriblers.app

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
.github/workflows/: publish.yml
src/: App.css  App.tsx  Web.tsx  download-thanks.tsx  main.tsx  vite-env.d.ts
src-tauri/: .gitignore  2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: file-tab.tsx  menu-bar.tsx  rename-dialog.tsx  sidebar.tsx  tab-dialog.tsx  tab-provider.tsx  tabs.tsx  text.tsx  title-bar-buttons.tsx  title-bar.tsx  updater-dialog.tsx  updater.tsx  zoom-provider.tsx
src/components/ui/: tooltip.tsx
src/lib/: events.ts  file-dialog-helper.ts  store.ts  tab-switch.ts  text-area-helper.ts
src/web/: data.ts  download-thanks.tsx  home.tsx  layout.tsx  router.tsx
